[metadata]
name = tapas-sumo-coupling
version = 0.23.1

[options]
install_requires =
    rtree
    pyproj
    psycopg2
    pandas
    sumolib

[options.entry_points]
console_scripts =
    tsc_main = tapas_sumo_coupling:tsc_main.main
    tsc_install = tapas_sumo_coupling:install_scenario_templates.main
